部分显示更新为汉字

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="banner">
-      <h1>News</h1>
+      <h1>郝博客</h1>
       <p>Local and National News</p>
     </header>
 
@@ -32,10 +32,10 @@
 
     <main>
       <section>
-        <h2>Local News</h2>
+        <h2>日记栏</h2>
         <article>
           <header>
-            <h3>Fire fighters rescue man from building</h3>
+            <h3>占位1</h3>
             <p>(author, date)</p>
           </header>
           <p>This is the story text. This is the story text.</p>
@@ -44,7 +44,7 @@
 
         <article>
           <header>
-            <h3>New Library to be built</h3>
+            <h3>占位2</h3>
             <p>(author, date)</p>
           </header>
           <p>This is the story text. This is the story text.</p>
@@ -53,10 +53,10 @@
       </section>
 
       <section>
-        <h2>National News</h2>
+        <h2>杂侃栏</h2>
         <article>
           <header>
-            <h3>Snow storm is making travel difficult</h3>
+            <h3>占位3</h3>
             <p>(author, date)</p>
           </header>
           <p>This is the story text. This is the story text.</p>
@@ -65,7 +65,7 @@
 
         <article>
           <header>
-            <h3>Thousands are without power</h3>
+            <h3>占位四</h3>
             <p>(author, date)</p>
           </header>
           <p>This is the story text. This is the story text.</p>
@@ -75,12 +75,12 @@
     </main>
 
     <aside>
-      <h2>Be a news reporter</h2>
+      <h2>边栏</h2>
       <p>If you see news happening - Send us a Text.</p>
     </aside>
 
     <footer>
-      <p>Footer Information</p>
+      <p>底部信息</p>
     </footer>
 
   </body>
